tdf#49102 - remove list numbering from merged cells

The hidden cells in a vertical merge retained their
numbered list properties.

It is possible in LO's UI to create a table similar to this
by numbering the cells first, and then merging them.
So this behaviour also needs to be prevented in
a future patch.

Change-Id: I0c3ae50aada3fa03e624b1d4212b2776b7559036